# cardano-millions-testnet

./: .gitignore  README.md  validate-payment.cabal
.github/workflows/: codacy.yml  codeql.yml
api-backend/: app.js  package-lock.json  package.json
api-backend/controllers/: query-db.js
api-backend/routes/: query-db.js
app/: token-name.hs  validate-payment-plutus.hs
plutus-scripts/: validate-payment.plutus
scripts/: mint.sh  redeem-funds.sh  redeem-game-fees.sh  redeem-token.sh  redeem.sh  setup.sh  transfer.sh
src/Validate/: Onchain.hs  Utils.hs
tests/: script.addr  test-asset.tx
