Cabal-Version:      2.4
Name:               house-of-cardano
Version:            0.1.0.0
Build-Type:         Simple

Author:              Simon
Maintainer:          hoc@house-of-cardano.io
Copyright:           © 2022 HouseOfCardano
License:             MIT
License-files:       LICENSE

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  exposed-modules:     Validate.Onchain                     
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , base16-bytestring
                     , binary
                     , bech32
                     , containers
                     , bytestring
                     , data-default
                     , dlist                     
                     , freer-extras
                     , lens
                     , nonempty-containers
                     , playground-common
                     , plutus-contract
                     , plutus-chain-index
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , prettyprinter
                     , tagged
                     , text
                     , serialise
                     , cardano-api
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable validate-payment-plutus
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              validate-payment-plutus.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , house-of-cardano
                      , plutus-ledger-api
                      , bytestring
                      , cardano-ledger-alonzo